<resources>

    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="please_enter_you_email">Please enter you email</string>
    <string name="password">Password</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account"><u>Create a new account</u></string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="please_enter_you_full_name">Please enter you full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="date_of_birth">Date Of Birth</string>
</resources>